--- a/flutter_bilibili/pubspec.yaml
+++ b/flutter_bilibili/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^3.0.10
   shared_preferences: ^2.0.6
+  fluttertoast: ^8.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
